// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component testing Badge normal 1`] = `
<DocumentFragment>
  <span
    class="sc-bdnxRM hBlYwA"
    color="#FFFFFF"
    font-size="0.65em"
    font-weight="bold"
    type="normal"
  >
    text
  </span>
</DocumentFragment>
`;

exports[`Badge component testing Badge pill 1`] = `
<DocumentFragment>
  <span
    class="sc-bdnxRM kfKuAr"
    color="#FFFFFF"
    font-size="0.65em"
    font-weight="bold"
    type="pill"
  >
    text
  </span>
</DocumentFragment>
`;
